// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink component renders about link without active styles 1`] = `
<orionlabs-nav-link>
  #shadow-root(open)
    <a
      class="text-lg pb-1 hover:text-white"
    >
      About
    </a>
</orionlabs-nav-link>
`;

exports[`NavLink component renders home link with active styles 1`] = `
<orionlabs-nav-link>
  #shadow-root(open)
    <a
      class="text-lg pb-1 hover:text-white border-b-2 hover:border-white"
    >
      Home
    </a>
</orionlabs-nav-link>
`;
